--- a/architecture.html
+++ b/architecture.html
@@ -16,27 +16,27 @@
       <h2 class="project-tagline">FollowAnalytics + Heroku + Salesforce</h2>
 
       <div class="deploy">
-        <a class="btn heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/followanalytics/fa-demo-heroku-insurance/tree/master" ref="https://heroku.com/deploy">
-                        <img width="100%" src="images/heroku-button.svg" alt="Deploy" />
-                    </a>
         <a class="salesforce btn" target="_blank" href="https://appexchange.salesforce.com/listingDetail?listingId=a0N3000000B4ZXiEAN">
-                        <img width="100%" src="images/salesforce-button.svg" />
-                    </a>
-        </div>
+            <img width="100%" src="images/salesforce-button.svg" />
+        </a>
+        <a class="btn heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/followanalytics/fa-demo-heroku-insurance/tree/master" ref="https://heroku.com/deploy">
+            <img width="100%" src="images/heroku-button.svg" alt="Deploy" />
+        </a>
+      </div>
 
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="walkthrough.html">Walkthrough</a></li>
-          <li><a href="#" class="current">Architecture</a></li>
-          <li><a href="setup.html">Setup</a></li>
-        </ul>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="walkthrough.html">Walkthrough</a></li>
+        <li><a href="#" class="current">Architecture</a></li>
+        <li><a href="setup.html">Setup</a></li>
+      </ul>
     </section>
 
     <section class="main-content">
       <h2>Mobile Enterprise Success architecture</h2>
       <p>Below is the architecture for the Insurance demo, illustrating how FollowAnalytics, Heroku and Salesforce work together to bring Success to Enterprise companies. Most pieces can be reused to build your own projects around FollowAnalytics and Heroku.</p>
 
-      <h1>PUT DIAGRAM HERE</h1>
+      <!--PUT DIAGRAM HERE-->
 
       <h2>Components</h2>
       <p>The demo is built around the following components:</p>
