--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
       <h2 class="project-tagline">FollowAnalytics + Heroku + Salesforce</h2>
 
       <div class="deploy">
-        <a class="btn heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/followanalytics/fa-demo-heroku-insurance/tree/master" ref="https://heroku.com/deploy">
-                        <img width="100%" src="images/heroku-button.svg" alt="Deploy" />
-                    </a>
         <a class="salesforce btn" target="_blank" href="https://appexchange.salesforce.com/listingDetail?listingId=a0N3000000B4ZXiEAN">
-                        <img width="100%" src="images/salesforce-button.svg" />
-                    </a>
-        </div>
+            <img width="100%" src="images/salesforce-button.svg" />
+        </a>
+        <a class="btn heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/followanalytics/fa-demo-heroku-insurance/tree/master" ref="https://heroku.com/deploy">
+            <img width="100%" src="images/heroku-button.svg" alt="Deploy" />
+        </a>
+      </div>
 
-        <ul class="menu">
-          <li><a href="#" class="current">Home</a></li>
-          <li><a href="walkthrough.html">Walkthrough</a></li>
-          <li><a href="architecture.html">Architecture</a></li>
-          <li><a href="setup.html">Setup</a></li>
-        </ul>
+      <ul class="menu">
+        <li><a href="#" class="current">Home</a></li>
+        <li><a href="walkthrough.html">Walkthrough</a></li>
+        <li><a href="architecture.html">Architecture</a></li>
+        <li><a href="setup.html">Setup</a></li>
+      </ul>
     </section>
 
     <section class="main-content">
@@ -37,7 +37,8 @@
 
 <p>Get FollowAnalytics as an Heroku add-on, use the provided mobile app to generate data, and see its data both in FollowAnalytics and in Salesforce. Use the Heroku demo app to send push notifications to the mobile app.</p>
 
-<h1>PUT VIDEO HERE</h1>
+<p>Check out the <a href="setup.html">Setup page</a> to get started.</p>
+<!-- PUT VIDEO HERE -->
 
       <footer class="site-footer">
         <span class="site-footer-owner">Copyright 2016 FollowAnalytics, Inc. All rights reserved.</span>
