--- a/walkthrough.html
+++ b/walkthrough.html
@@ -16,44 +16,46 @@
       <h2 class="project-tagline">FollowAnalytics + Heroku + Salesforce</h2>
 
       <div class="deploy">
-        <a class="btn heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/followanalytics/fa-demo-heroku-insurance/tree/master" ref="https://heroku.com/deploy">
-                        <img width="100%" src="images/heroku-button.svg" alt="Deploy" />
-                    </a>
         <a class="salesforce btn" target="_blank" href="https://appexchange.salesforce.com/listingDetail?listingId=a0N3000000B4ZXiEAN">
-                        <img width="100%" src="images/salesforce-button.svg" />
-                    </a>
-        </div>
+            <img width="100%" src="images/salesforce-button.svg" />
+        </a>
+        <a class="btn heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/followanalytics/fa-demo-heroku-insurance/tree/master" ref="https://heroku.com/deploy">
+            <img width="100%" src="images/heroku-button.svg" alt="Deploy" />
+        </a>
+      </div>
 
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#" class="current">Walkthrough</a></li>
-          <li><a href="architecture.html">Architecture</a></li>
-          <li><a href="setup.html">Setup</a></li>
-        </ul>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#" class="current">Walkthrough</a></li>
+        <li><a href="architecture.html">Architecture</a></li>
+        <li><a href="setup.html">Setup</a></li>
+      </ul>
     </section>
 
     <section class="main-content">
       <h2>Get started</h2>
 
-<p>This walkthrough will hep you get started once you've followed the <a href="setup.html">setup steps</a>. You therefore need to have your Salesforce configured, your Heroku app running, and the mobile app compiled and running on a device.</p>
+<p>This walkthrough will help you get started once you've followed the <a href="setup.html">setup steps</a>. You therefore need to have your Salesforce configured, your Heroku app running, and the mobile app compiled and running on a device.</p>
 
 <h3>1. Populate your Salesforce</h3>
 
-<p>To ensure you have content to show, add a few contacts to your Salesforce. Make sure you provide e-mail addresses for these contacts, you will be using them later in the mobile app.</p>
+<p>To ensure you have contents to show, add a few contacts to your Salesforce. Make sure you provide e-mail addresses for these contacts, you will be using them later in the mobile app.</p>
 
 <h3>2. Generate mobile data</h3>
 
 <h4>On your newly added contacts</h4>
 <p>Launch the mobile app, and login using the e-mail address of one of the contacts you created above. You don't need a real password, but this will tell the FollowAnalytics SDK who is using the app, and help it mark the usage data as coming from this user.</p>
 
-<p>Exit the app by pressing the home button on your phone. Open it back, log out from that account and use another e-mail address added previously. Exit the app again and repeat that process for all or most of the accounts you created.</p>
+<p>Log out by double-tapping on the profile pic at the top of the screen. Log in using another e-mail address previously added to Salesforce. Log out again and repeat that process for all or most of the accounts you created.</p>
+
+<p>Once you've logged in with the last one, exit the app by pressing the device home button. This will trigger a sync with the FollowAnalytics servers.</p>
 
 <h4>For leads</h4>
 <p>If you launch the app again, and log in with an unkown e-mail address, the FollowAnalytics Salesforce connector will consider this session of usage as coming from an unknown customer or prospect. Since it doesn't match any Contact entry in Salesforce, it will be added to a new Lead.</p>
 
 <p>You can repeat the process a few times to populate your Salesforce a bit more.</p>
 
-<blockquote>Please note that the sync of data from FollowAnalytics to Salesforce occurs twice a day. To verify that the data was properly received by FollowAnalytics, please refer to the Analysis section of this page, below.</blockquote>
+<blockquote>Please note that the sync of data from FollowAnalytics to Salesforce occurs twice a day. To verify that the data was properly received by FollowAnalytics, please refer to the Analysis section of this page, right below.</blockquote>
 
 <h3>3. Analyze your usage data in FollowAnalytics</h3>
 
@@ -65,27 +67,25 @@
   <li>To see the <strong>users who logged in</strong>, go to <em>User Analytics &gt; Logged-in users</em>.</li>
   <li>For <strong>high level indicators</strong> on usage, go to <em>User Analytics &gt; Analytics</em></li>
   <li>To analyze the <strong>actions taken in-app</strong>, take a look at <em>User Analytics &gt; Funnels, Events & Errors</em>.</li>
-  <li>To dig into how users behave in your app, take a look at the Segment section: create a combination of filters, and see a detailed analysis in under a minute.</li>
+  <li>To dig into how users <strong>behave</strong> in your app, take a look at the <em>Segment</em> section: create a combination of filters, and see a detailed analysis in under a minute.</li>
 </ul>
 
 <h3>4. Send a push message from your Heroku app</h3>
 
-<p>The Heroku example app that was deployed for this example allows to retrive the list of users known in the product, and send them push notifications.</p>
-
-<ol>
-<li>Go to your Heroku app</li>
-<li>Check a few lines of users and click "Send push message"</li>
-<li>Write a message to send them, and click "Send"</li>
-</ol>
+<p>The Heroku example app that was deployed for this example will automatically retrieve the list of users known in FollowAnalytics, and allow to send them push notifications.</p>
+<p>Simply go to the dedicated section on the Heroku app home page, check the boxes in front of the users you'd like to send a push message to, write a message (50 chars max), and click <em>Send</em>.</p>
 
 <blockquote>Push messages will be delivered to the devices where the selected users are currently logged-in. Delivery will only happen if the user accepted to receive push notifications (opted in) and if the app was built with the appropriate push certificate.</blockquote>
+
+<h3>What else?</h3>
+<p>Feel free to fork the projects on Github to enhance them. You can also check out the <a href="http://dev.followanalytics.com">FollowAnalytics Developer Portal</a> to get our SDKs, and see the product API documentations.</p>
+<p>If you have any question regarding FollowAnalytics or this project, please contact Antony&nbsp;at&nbsp;followanalytics.com.</p>
+  
 
       <footer class="site-footer">
         <span class="site-footer-owner">Copyright 2016 FollowAnalytics, Inc. All rights reserved.</span>
       </footer>
 
     </section>
-
-  
   </body>
 </html>
