--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p>Get FollowAnalytics as an Heroku add-on, use the provided mobile app to generate data, and see its data both in FollowAnalytics and in Salesforce. Use the Heroku demo app to send push notifications to the mobile app.</p>
 
-<p>Check out the <a href="setup.html">Setup page</a> to get started.</p>
+<p><strong>Check out the <a href="setup.html">Setup page</a> to get started.</strong></p>
 <!-- PUT VIDEO HERE -->
 
       <footer class="site-footer">
